Update CMakeLists and add some comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,31 @@
 cmake_minimum_required (VERSION 2.8.0)
 project (hw2p1)
 
-set(hw2p1_VERSION "v0.1")
-set(hw2p1_VERSION_QUALIFIERS "")
-string(TIMESTAMP hw2p1_VERSION_DATE %Y-%m-%d\ %H%M UTC)
-set(hw2p1_COMPLETE_VERSION_STRING "${hw2p1_VERSION} ${hw2p1_VERSION_QUALIFIERS} (${hw2p1_VERSION_DATE})")
-message(STATUS "Using version string: ${hw2p1_COMPLETE_VERSION_STRING}")
 
-set(CMAKE_VERBOSE_MAKEFILE off)
-if (CMAKE_COMPILER_IS_GNUCC)
-    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -rdynamic -O2 -g")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g")
-endif(CMAKE_COMPILER_IS_GNUCC)
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -rdynamic -O3 -g -fopenmp")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g")
 
 
+find_package(MPI)
+include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 
 set(HEADERS
     common.h
+    
 )
 
 set(SOURCES
     common.cpp
 )
 
-add_executable(hw2p1_engine ${HEADERS} main.cpp ${SOURCES})
-target_compile_definitions( hw2p1_engine
-                            PUBLIC -Dhw2p1_VERSION_STRING="${hw2p1_COMPLETE_VERSION_STRING}" )
-target_link_libraries( hw2p1_engine)
+add_executable(serial_h2p1 ${HEADERS} serial ${SOURCES})
+target_link_libraries( serial_h2p1)
+
+add_executable(autograder_h2p1 ${HEADERS} autograder.cpp ${SOURCES})
+target_link_libraries( autograder_h2p1)
+
+add_executable(openmp_h2p1 ${HEADERS} openmp.cpp ${SOURCES})
+target_link_libraries( openmp_h2p1)
+
+add_executable(mpi_h2p1 ${HEADERS} mpi.cpp ${SOURCES})
+target_link_libraries( mpi_h2p1 ${MPI_C_LIBRARIES})
